bulletin-board-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bulletin-board-deployment
  namespace: #{namespace}
  labels:
    app: bulletin-board
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bulletin-board
  template:
    metadata:
      labels:
        app: bulletin-board
    spec:
      containers:
      - name: bulletin-board
        image: #{image}
        command: ["npm","start"]
        ports:
        - containerPort: 8080
