bulletin-board-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: bulletin-board-service
spec:
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 8080
