bulletin-board-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bulletin-board-ingress
spec:
  backend:
    serviceName: bulletin-board-service
    servicePort: 8080
