deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bulletin-board-deployment
  namespace: #{namespace}
  labels:
    app: bulletin-board
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bulletin-board
  template:
    metadata:
      labels:
        app: bulletin-board
    spec:
      containers:
      - name: bulletin-board
        image: #{image}
        command: ["npm","start"]
        ports:
        - containerPort: 8080

---

kind: Service
apiVersion: v1
metadata:
  name: bulletin-board-service
spec:
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 8080

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bulletin-board-ingress
spec:
  backend:
    serviceName: bulletin-board-service
    servicePort: 8080
